# mockspace-hilavitkutin-stack-lints

./: Cargo.toml
src/: lib.rs  util.rs
src/lints/: arvo_types_only.rs  lint_allow_requires_task_id.rs  no_alloc.rs  no_bare_numeric.rs  no_bare_option.rs  no_bare_result.rs  no_bare_static_str.rs  no_bare_string.rs  no_dyn_dispatch.rs  no_public_raw_field.rs  no_runtime_registration.rs  no_runtime_spawn.rs  no_std.rs  no_vec_in_trait_sig.rs  semantic_alias_nudge.rs  strategy_marker_required.rs  trait_first_signatures.rs  writing_style.rs
tests/: bare_primitives_anywhere.rs  no_bare_static_str.rs  pack_entry_points.rs
