[package]
name = "mockspace-hilavitkutin-stack-lints"
version = "0.1.0"
edition = "2021"
description = "Mockspace lint pack for the hilavitkutin / arvo / notko / clause stack"
license = "MPL-2.0"
publish = false

[dependencies]
# Committed state points at the canonical mockspace repo. For local
# iteration, use `[patch]` in `.cargo/config.toml` to redirect.
mockspace-lint-rules = { git = "ssh://git@github.com/hiisi-digital/mockspace.git", branch = "feat/lint-context-all-sources" }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

[dev-dependencies]
tempfile = "3"
